Makefile: Clean compat subdirectory.

Fixes ticket #5546.